Fixed issues suggested in static code analysis